# rewire-sqlmodel

./: README.md  pyproject.toml  requirements.txt
rewire_sqlmodel/: __init__.py  tests.py
rewire_sqlmodel/ext/: alembic_merge_dev.py  alembic_migrations.py  fastapi.py
rewire_sqlmodel/ext/alembic_template/: env.py  script.py.mako
rewire_sqlmodel/ext/alembic_template/versions/: root_initial.py
